--- a/Day 1/style.css
+++ b/Day 1/style.css
@@ -58,7 +58,6 @@ body{
 .weather h2{
     font-size: 45px;
     font-weight: 400;
-    margin-top: -10px;
 }
 .details{
     display: flex;
@@ -66,4 +65,17 @@ body{
     justify-content: space-between;
     padding: 0 20px;
     margin-top: 50px;
+}
+.col{
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
+.col img{
+    width: 40px;
+    margin-right: 10px;
+}
+.humidity, .wind{
+    font-size: 28px;
+    margin-top: -6px;
 }
